dark mode selection fix

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -220,11 +220,14 @@ main:focus {
 }
 
 ::selection {
-	background: var(--color-dark);
-	color: var(--color-light)
+	background: var(--text-color);
+	color: var(--background-color);
 }
 
 /* components */
+.post-list {
+	margin:0;
+}
 .post-metadata {}
 
 .post-tag {}
